--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
           <h2 class="nav-title">{{ site.title }}</h2>
         </a>
         <ul class="nav-social-icons">
+          {% if site.about %}
+            <li><a target="_blank" href="about.html">About</a></li>
+          {% endif %}
           {% if site.social.email %}
             <li><a target="_blank" href="mailto:{{ site.social.email }}"><i class="fas fa-envelope"></i></a></li>
           {% endif %}
